fix css center page alignment

--- a/css/stylePomodoro.css
+++ b/css/stylePomodoro.css
@@ -8,7 +8,6 @@
 
 body {
     background-color: black;
-    min-height: 100vh;
 }
 
 a {
@@ -16,7 +15,7 @@ a {
 }
 
 main {
-    margin-top: 120px;
+    margin-top: 70px;
 }
 
 .active_inidcator {
